# Swizio

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
src/: agent.py  api.py  config.py  main.py  tools.py
tests/: test_api.py  test_tools.py
