[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swizio-diagram-generator"
version = "0.1.0"
description = "An async Python API to create diagrams from natural language using an LLM agent."
readme = "README.md"
authors = [{ name = "Vlad Belmach", email = "your@email.com" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "google-generativeai>=0.5.0",
    "diagrams>=0.23.0",
    "streamlit>=1.33.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",

]

[project.urls]
Homepage = "https://github.com/vladbelms/Swizio"


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]


[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"

# Настройки для Pytest
[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]